...

class HomeViewController: UIViewController {

    override func viewDidLoad() {
        super.viewDidLoad()

        title = "Load Transactions"

        view.backgroundColor = .white

        let loadTransactionsButton = UIButton()
        loadTransactionsButton.setTitle("Load Transactions", for: .normal)
        loadTransactionsButton.setTitleColor(.black, for: .normal)
...
